Add option to omit full signer certificate from sealed sender certificates